13865
The test program
```scala
trait A {
  def newC() : C = (new CW{}).asInstanceOf[C]
  trait CW {
    self: C =>
  }
  type C <: CW
}
```
This compiles with the newly released 2.7.2.final compiler
```scala
> cat t1.scala 

trait A {
  def newC() : C = (new CW{}).asInstanceOf[C]
  trait CW {
    self: C =>
  }
  type C <: CW
}
> scalac -version
Scala compiler version 2.7.2.final -- Copyright 2002-2008, LAMP/EPFL
> scalac t1.scala 
> 
```
The same program fails on the current trunk
```scala
> bscalac -version
Scala compiler version 2.7.2.r16535-b20081110100700 -- Copyright 2002-2008, LAMP/EPFL
> bscalac t1.scala 
t1.scala:13: error: illegal inheritance;
 self-type java.lang.Object with A.this.CW does not conform to A.this.CW's selftype A.this.C
  def newC() : C = (new CW{}).asInstanceOf[C]
                        ^
one error found
```
This is the encoding used for testing virtual traits in scala
